# line_checker

./: .gitignore  README.md  setup.cfg
line_checker/: line_checker.py
src/: line_checker.py
tests/: conftest.py  test_argument_parsing.py  test_discovery.py  test_display_class.py  test_elapse_time_class.py  test_line_checker.py
