[metadata]
name = line-checker
description = line length checker
version = 0.0.0
author = Chad Larson
author_email = techchad2@gmail.com
platform =
url = https://github.com/tech-chad/line_checker
license = MIT
license_file = LICENSE


[options]
py_modules = line_checker.py
packages = find:
install_requires:
    importlib-metadata>=1.6
    importlib-resources>=1.5
python_requires = >= 3.6.1

[options.packages.find]
exclude =
    tests*
    tests

[options.entry_points]
console_scripts =
