[metadata]
name = line-checker
description = line length checker
version = 0.1.0
author = Chad Larson
author_email = techchad2@gmail.com
url = https://github.com/tech-chad/line_checker
license = MIT
license_file = LICENSE

[options]
py_modules = line_checker.line_checker
install_requires:
    importlib-metadata>=1.6
    identify>=1.4.17
python_requires = >= 3.6.1

[options.packages.find]
exclude =
    tests*
    tests

[options.entry_points]
console_scripts =
    line_checker = line_checker.line_checker:main